--- a/springbootsell/src/main/resources/application-dev.yml
+++ b/springbootsell/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ server:
     context-path: /sell
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/sell?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
     username: root
     password: 123456
@@ -14,3 +14,5 @@ spring:
     show-sql: true
   jackson:
     default-property-inclusion: non_null
+  mvc:
+    static-path-pattern: /static/**
