--- a/delicious/src/main/resources/application-dev.yml
+++ b/delicious/src/main/resources/application-dev.yml
@@ -1,10 +1,10 @@
 server:
-  port: 8888
+  port: 8080
 
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/sell?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+    url: jdbc:mysql://127.0.0.1:3306/delicious?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
     username: root
     password: 123456
   jpa:
